--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Jquaternion</title>
-  <meta name="description" content="MVC + Maven + Spring + AngularJS + Hibernate + REST API project, with full hot reload of Java and JavaScript code on steroids">
+  <title>jQuaternion</title>
+  <meta name="description" content="An out-of-the-box Java APP MVC framework on s73r01ds">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Jquaternion</h1>
     </header>
     <div id="container">
-      <p class="tagline">MVC + Maven + Spring + AngularJS + Hibernate + REST API project, with full hot reload of Java and JavaScript code on steroids</p>
+      <p class="tagline">An out-of-the-box Java APP MVC framework on s73r01ds</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
