--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>JQuaternion by tHeStRyNg</title>
+    <title>JQuaternion</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>JQuaternion</h1>
-        <h2>An 0ut-0f-the-b0x Java APP MVC framework on s73r01ds</h2>
+        <h1 style="margin-left: 150px;">JQuaternion</h1>
+        <h3 style="margin-top: -35px;margin-left: 150px;font-size: 150%;">&ltmaven&gtcom.jquaternion.jqsa&lt/maven&gt</h3>
+        <h2 style="margin-top: 35px;margin-left: 0px;">A Java MVC framework on s73r01ds by JQuaternion.org</h2>
         <a href="https://github.com/stryng/JQuaternion" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -29,16 +30,15 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="welcome-to-jquaternion" class="anchor" href="#welcome-to-jquaternion"><span class="octicon octicon-link"></span></a>Welcome to <strong><a href="http://stryng.github.io/JQuaternion">JQuaternion</a></strong>
+<a name="welcome-to-jquaternion" class="anchor" href="#welcome-to-jquaternion"><span class="octicon octicon-link"></span></a>Welcome to <strong><a href="https://www.jquaternion.org">JQuaternion.org</a></strong>
 </h1>
 
-<h5>
-<a name="current-build-status" class="anchor" href="#current-build-status"><span class="octicon octicon-link"></span></a>Current Build Status - <a href="https://travis-ci.org/stryng/JQuaternion">Travis-CI</a></h5>
+<h5><a name="current-build-status" class="anchor" href="#current-build-status"><span class="octicon octicon-link"></span></a>Current Build Status - <a href="https://travis-ci.org/stryng/JQuaternion">Travis-CI</a></h5>
 <br>
 <p><img src="https://travis-ci.org/stryng/JQuaternion.svg" style="margin-left: 40px;" alt="jQuaternion"></p>
 
 <h2>
-<a name="tech-stack" class="anchor" href="#tech-stack"><span class="octicon octicon-link"></span></a>Tech stack</h2>
+<a name="tech-stack" class="anchor" href="#tech-stack"><span class="octicon octicon-link"></span></a>Tech Stack</h2>
 
 <h3>
 <a name="client-side" class="anchor" href="#client-side"><span class="octicon octicon-link"></span></a>Client Side Components</h3>
@@ -110,12 +110,12 @@
             .tar.gz file
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/stryng/JQuaternion"></a> is maintained by <a href="https://github.com/stryng">tHeStRyNg</a>.</p>
+          <p class="repo-owner">maintained by <a href="https://www.jquaternion.org">JQuaternion.Org</a></p>
 
          </aside>
       </div>
     </div>
-    
+
 <script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(["trackPageView"]);
