--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <header>
       <div class="inner">
         <h1 style="margin-left: 150px;">JQuaternion</h1>
-        <h3 style="margin-top: -35px;margin-left: 150px;font-size: 150%;">&ltmaven&gtcom.jquaternion.jqsa&lt/maven&gt</h3>
+        <br>
+        <h3 style="margin-top: -35px;margin-left: 90px;font-size: 150%;">&ltmaven&gt</h3>
+        <h3 style="margin-top: -15px;margin-left: 180px;font-size: 150%;">com <h style="font-size: 60%;"> &ltdot&gt</h><h style="font-size: 150%;"> jquaternion </h><h style="font-size: 60%;">&ltdot&gt </h><h style="font-size: 150%;">jqsa</h></h3>
+        <h3 style="margin-top: -10px;margin-left: 550px;font-size: 150%;">&lt/maven&gt</h3>
         <h2 style="margin-top: 35px;margin-left: 0px;">A Java MVC framework on s73r01ds by JQuaternion.org</h2>
         <a href="https://github.com/stryng/JQuaternion" class="button"><small>View project on</small>GitHub</a>
       </div>
